fix collapse background color

--- a/packages/dnb-eufemia/src/components/breadcrumb/style/dnb-breadcrumb.scss
+++ b/packages/dnb-eufemia/src/components/breadcrumb/style/dnb-breadcrumb.scss
@@ -109,12 +109,38 @@
   &__collapse {
     display: flex;
     flex-direction: column;
+
+    background-color: var(--token-color-background-page-background);
+
+    @include utilities.allBelow(medium) {
+      &:has(.dnb-height-animation--is-visible) {
+        border-top: 0.0625rem solid
+          var(--token-color-stroke-neutral-subtle);
+        border-bottom: 0.0625rem solid
+          var(--token-color-stroke-neutral-subtle);
+      }
+    }
+  }
+
+  &--variant-collapse &__collapse {
+    width: 100%;
+
+    &:has(.dnb-height-animation--is-visible) {
+      border-top: 0.0625rem solid var(--token-color-stroke-neutral-subtle);
+      border-bottom: 0.0625rem solid
+        var(--token-color-stroke-neutral-subtle);
+    }
   }
 
   &--variant-collapse .dnb-accordion {
     width: 100%;
+    flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
+
+    .dnb-accordion__tertiary-content {
+      width: 100%;
+    }
   }
 
   &__collapse &__item {
